# cc-gui

./: .gitignore  README.md  index.html  package-lock.json  package-release.sh  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cc.rs  fs.rs  main.rs
